added some content/links

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <title>Johannes Lichtenberger</title>
 </head>
 <body>
-<p>Some links:</p>
+<p>Follow me on:</p>
 <ul>
-  <li></li>
-  <li></li>
+  <li><a href='https://plus.google.com/108148962514316073918/posts'></a>Google Plus</li>
+  <li><a href='https://www.facebook.com/johannes.lichtenberger'>Facebook</a></li>
+  <li><a href='http://groups.google.com/groups/search?hl=de&q=author:johannes+author:lichtenberger&sitesearch=groups.google.com&scoring=d'></a>Google Groups</li>
+  <li><a href='https://github.com/JohannesLichtenberger'>Github</li>
+  <li><a href='http://stackoverflow.com/users/1052521/johannes'>Stack Overflow</a></li>
 </ul>
 </body>
 </html>
